Edited wiki page through web user interface.

--- a/wiki/WhatWorks.wiki
+++ b/wiki/WhatWorks.wiki
@@ -2,7 +2,7 @@
 
 = What Works =
 
-  * class definitions
+  * class definitions, inner class definitions
   * method definitions
   * most expressions (see WhatsBroken)
   * if statements, for statements, while statements
