Edited wiki page through web user interface.

--- a/wiki/WhatsBroken.wiki
+++ b/wiki/WhatsBroken.wiki
@@ -2,7 +2,7 @@
 
   * do statement (fixable)
   * super constructor calls (fixable)
-  * break statement with label
-  * continue statement with label
+  * break statement with label; bare break statements okay
+  * continue statement with label; bare continue statements okay
   * unsigned shift right (>>>) 
   * unsigned shift right assign (>>>=)
