--- a/README
+++ b/README
@@ -1,43 +1,47 @@
 About
 -----
-This package provides tools to (imperfectly) translate java source
+This package provides tools to (imperfectly) translate Java source
 code to python source code.
-
-
-Build
------
-To build the code, install Python_ 2.5 or newer, and install PyAntlr_.
-Then run "make" in the top of the package.
-
-.. _Python: http://www.python.org/
-.. _PyAntlr: http://www.antlr.org/
 
 
 Install
 -------
+Before you install the package, make sure you have Python_ 2.5 or
+newer, and that you have PyAntlr_.
 
-To install the package and the scripts into your system, then as the super user, run:
+To install the package and the scripts into your system, then as the
+super user, run:
 
     $ python setup.py install
-
-The setup script will install the java2python package in
-$PYTHONHOME/site-packages, and install the scripts into a bin
-directory.
 
 
 Use
 ---
-To use the "java_to_python" script, either make and install the
-package (as per above), or adjust PYTHONPATH (and possibly PATH) to
-include the source directories.  Then run the script like so:
+Run the script like so:
 
-    $ java_to_python -i input_file.java -o output_file.py
+    $ j2py -i input_file.java
+
+Or:
+
+    $ j2py -i input_file.java -o output_file.py
+
+The script will read from stdin when no input files are given:
+
+    $ j2py < some_file.java
 
 The script has configuration options that you can view:
 
-    $ java_to_python -h
+    $ j2py -h
+
+You can customize the code generation via configuration modules.  Read
+more about them on the wiki_.
 
 
 Feedback
 --------
 Drop me a note if you're so inclined:  troy@gci.net.
+
+
+.. _Python: http://www.python.org/
+.. _PyAntlr: http://www.antlr.org/
+.. _wiki:  http://code.google.com/p/java2python/w/list
